<resources>
    <string name="app_name">Trabalho_Pmeu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Authentication-->
    <string name="ja_tem_conta_login">Login</string>
    <string name="ja_possui_conta">Já possui conta?</string>
    <string name="registrar">Registrar</string>
    <string name="password_hint">Palavra-passe</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="nome_hint">Nome</string>
    <string name="introduza_os_dados">Introduza os dados</string>
    <string name="bem_vindo">Bem-Vindo!</string>
    <string name="bem_vindo_de_volta">Bem-Vindo de volta!</string>
    <string name="virtualclass">VirtualClass</string>
    <string name="descricao_app">Explore o futuro da educação com a aplicação revolucionária \'Virtual Class\', uma ferramenta inovadora projetada para simplificar e aprimorar a gestão de tarefas acadêmicas.</string>
    <string name="entrar">Entrar</string>
    <string name="naoTemConta">Não tem conta?</string>
    <string name="nao_tem_conta_resgistrar">Resgistrar</string>
    <string name="login_btn">Login</string>
    <string name="esqueceuPalavraPasse">Esqueceu-se da Palavra-passe?</string>
    <string name="introduzaMail">Introduza o seu E-mail</string>
    <string name="btnEnviar">Enviar</string>
    <string name="BtnCancelar">Cancelar</string>

    <!--    Erros-->
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Introduza um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está registrado.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
    <string name="adicionar_tarefa">Adicionar Tarefa</string>
    <string name="adicionar">Adicionar</string>
    <string name="feito">Feito</string>
    <string name="a_fazer">A fazer</string>
    <string name="por_fazer">Por Fazer</string>
    <string name="status">Status:</string>
    <string name="descricao">Descrição</string>
    <string name="tarefa">Tarefa:</string>


<!--Tarefas-->
    <string name="text_title_form_task_fragment">Nova tarefa</string>
    <string name="text_description_form_task_fragment">Descrição</string>
    <string name="text_description_hint_form_task_fragment">Criar nova tela de login</string>
    <string name="text_editing_task_form_task_fragment">Editando tarefa…</string>
    <string name="text_status_form_task_fragment">Status</string>
    <string name="text_btn_save_task_form_task_fragment">Salvar</string>
    <string name="text_description_empty_form_task_fragment">Informe uma descrição para a tarefa.</string>
    <string name="text_save_task_sucess_form_task_fragment">Tarefa salva com sucesso.</string>
    <string name="text_update_task_sucess_form_task_fragment">Tarefa atualizada com sucesso.</string>
    <string name="text_erro_save_task_form_task_fragment">Erro ao salvar a tarefa.</string>


    <!--    Todo Fragment-->
    <string name="text_task_list_empty_todo_fragment">Nenhuma tarefa cadastrada.</string>
    <string name="text_message_delete_task_todo_fragment">Deseja realmente remover esta tarefa ?</string>

    <!--    Doing Fragment-->
    <string name="text_task_list_empty_doing_fragment">Nenhuma tarefa cadastrada.</string>
    <string name="text_message_delete_task_doing_fragment">Deseja realmente remover esta tarefa ?</string>

    <!--    Done Fragment-->
    <string name="text_task_list_empty_done_fragment">Nenhuma tarefa cadastrada.</string>
    <string name="text_message_delete_task_done_fragment">Deseja realmente remover esta tarefa ?</string>

    <!--    BottomSheet-->
    <string name="text_title_bottom_sheet">Atenção</string>
    <string name="text_button_bottom_sheet">Entendi</string>


    <string name="text_email">E-mail</string>
    <string name="text_email_hint">email@email.com</string>
    <string name="text_password">Senha</string>
    <string name="text_password_hint">******</string>
    <string name="text_register_account">Criar conta</string>
    <string name="text_button_confirm">Confirmar</string>
    <string name="text_task_delete_sucess">Tarefa removida com sucesso.</string>
    <string name="text_task_update_sucess">Tarefa atualizada com sucesso.</string>

    <!--    Login Fragment-->
    <string name="text_btn_login_fragment">Login</string>
    <string name="text_recover_login_fragment">Recuperar conta</string>
    <string name="text_password_empty_login_fragment">Informe sua senha.</string>
    <string name="text_email_empty_login_fragment">Informe seu e-mail.</string>

    <!--    Register Fragment-->
    <string name="text_password_empty_register_fragment">Informe sua senha.</string>
    <string name="text_email_empty_register_fragment">Informe seu e-mail.</string>

    <!--    Recover Account Fragment-->
    <string name="text_toolbar_recover_account_fragment">Recuperar conta</string>
    <string name="text_btn_recover_account_fragment">Enviar</string>
    <string name="text_email_empty_recover_account_fragment">Informe seu e-mail.</string>
    <string name="text_email_send_sucess_recover_account_fragment">Pronto, acabamos de enviar um link para seu e-mail.</string>

    <!--    Status Task-->
    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>

</resources>